<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (C) 2012 Shane Tully

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU Lesser General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU Lesser General Public License for more details.

You should have received a copy of the GNU Lesser General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>. -->

<resources>

    <string name="appName">Relay Remote</string>
    <string name="menu_settings">Settings</string>

    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="toggle">Toggle</string>
    <string name="nullStr"></string>
    <string name="okay">Okay</string>
    <string name="gotIt">Got It!</string>
    <string name="yes">Yes</string>
    <string name="nope">Nope</string>
    <string name="nevermind">Nevermind</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="exitBtn">Exit</string>
    <string name="no">No!</string>
    <string name="save">Save</string>
    <string name="whatsnew">What\'s New</string>
    <string name="about">About</string>

    <string name="addRelay">Add Relay</string>
    <string name="createGroup">Create Group</string>
    <string name="editGroup">Edit Group</string>
    <string name="editRelay">Edit Relay</string>
    <string name="updateRelay">Update Relay</string>
    <string name="updateGroup">Update Group</string>
    <string name="deleteRelay">Delete Relay</string>
    <string name="deleteGroup">Delete Group</string>
    <string name="refreshRelays">Refresh Relays</string>
    <string name="refreshingRelays">Refreshing relays&#8230;</string>
    <string name="addedRelay">Relay Added</string>
    <string name="createdGroup">Group Created</string>
    <string name="editedRelay">Relay Updated</string>
    <string name="editedGroup">Group Updated</string>
    <string name="deletedRelay">Relay Deleted</string>
    <string name="deletedGroup">Group Deleted</string>
    <string name="allOn">Turn All On</string>
    <string name="allOff">Turn All Off</string>

    <string name="relays">Relays</string>
    <string name="groups">Relay Groups</string>

    <string name="emptyText">No relays have been added yet.</string>
    <string name="emptyGroupText">No groups have been created yet.</string>
    <string name="pinLabel">Pin:</string>
    <string name="nameLabel">Name:</string>
    <string name="serverLabel">Server:</string>
    <string name="portLabel">Port:</string>
    <string name="selectRelays">Relays:</string>
    <string name="widgetTitle">Select a relay</string>

    <string-array name="pinSpinnerEntries">
        <item>Pin 2</item>
        <item>Pin 3</item>
        <item>Pin 4</item>
        <item>Pin 5</item>
        <item>Pin 6</item>
        <item>Pin 7</item>
        <item>Pin 8</item>
        <item>Pin 9</item>
    </string-array>

    <string name="createNFC">Create NFC Tag</string>
    <string name="nfcWrittenTitle">Success!</string>
    <string name="nfcWritten">The NFC tag was written successfully.</string>
    <string name="nfcToast">Performing NFC RelayRemote action&#8230;</string>
    <string name="aboutNFC">Cool! You have an NFC device!\n\nTo make an NFC tag, you first need a tag.
                            If you don\'t have one, order some and then come back here. If you have one
                            ready to go, read on.\n\nTo create an NFC tag, select an action on the next
                            menu to take for this relay; either always turn on, always turn off, or
                            toggle the current state. Then just touch your NFC tag to your device for
                            a second or two until you see a confirmation message. That\'s it!</string>

    <string-array name="nfcCmdOptions">
        <item>Turn On</item>
        <item>Turn Off</item>
        <item>Toggle</item>
    </string-array>

    <string name="connServer">Connecting to server&#8230;</string>
    <string name="gettingStates">Getting relay states from server(s)&#8230;</string>

    <string name="deleteRelayTitle">Delete Relay</string>
    <string name="deleteDialog">Are you sure you want to delete relay \"%s\"?</string>

    <string name="nfcNotSupportedErrorTitle">NFC Not Supported</string>
    <string name="nfcNotSupportedError">This device does not support NFC.</string>
    <string name="nfcDisabledErrorTitle">NFC Disabled</string>
    <string name="nfcDisabledError">This device supports NFC, but it is disabled. Enable it in the device\'s settings.</string>
    <string name="nfcReadOnlyErrorTitle">NFC Read Only</string>
    <string name="nfcReadOnlyError">The NFC tag is read only.</string>
    <string name="nfcFormattingErrorTitle">Formatting Error</string>
    <string name="nfcFormattingError">There was an error formatting the NFC tag.</string>
    <string name="nfcTagLostErrorTitle">Tag Lost</string>
    <string name="nfcTagLostError">The tag was lost or pulled away while writing to it.</string>
    <string name="nfcNoNdefErrorTitle">Invalid Tag</string>
    <string name="nfcNoNdefError">The NFC tag does not support NDEF format.</string>
    <string name="nfcBadSpaceErrorTitle">Not Enough Space</string>
    <string name="nfcBadSpaceError">The NFC tag cannot hold the amount of data required.</string>
    <string name="nfcUnknownErrorTitle">Unknown Error :(</string>
    <string name="nfcUnknownError">An unknown error occurred while writing to the NFC tag.</string>

    <string name="noRelaysSelectedErrorTitle">No Relays Selected</string>
    <string name="noRelaysSelectedError">No Relays are selected.</string>
    <string name="noGroupsSelectedErrorTitle">No Relay Groups Selected</string>
    <string name="noGroupsSelectedError">No relay groups are selected.</string>
    <string name="emptyNameErrorTitle">No Name Entered</string>
    <string name="emptyNameError">The name field cannot be empty.</string>
    <string name="emptyServerErrorTitle">No Server Entered</string>
    <string name="emptyServerError">The server field cannot be empty.</string>
    <string name="emptyPortErrorTitle">No Port Entered</string>
    <string name="emptyPortError">The port field cannot be empty.</string>
    <string name="portRangeErrorTitle">Invalid Port</string>
    <string name="portRangeError">The port must be between 1 and 65535.</string>
    <string name="readIOErrorTitle">Read IO Error</string>
    <string name="readIOError">There was an error reading the saved servers from the disk.</string>
    <string name="writeIOErrorTitle">Write IO Error</string>
    <string name="writeIOError">There was error writing the server to the saved servers list. It will not be saved.</string>
    <string name="serverConnectErrorTitle">Network Error</string>
    <string name="serverConnectError">Unable to connect to server.</string>
    <string name="unknownHostErrorTitle">Network Error</string>
    <string name="unknownHostError">The specified server could not be found on the network.</string>
    <string name="serverCommErrorTitle">Server Error</string>
    <string name="serverCommError">The server sent unexpected data or no data at all.</string>
    <string name="closedConnErrorTitle">Server Closed Connection</string>
    <string name="closedConnError">The server unexpectedly closed the connection.</string>
    <string name="serverErrorTitle">Server Error</string>
    <string name="serverError">The server reported an error processing the data sent to it. Try again.</string>
    <string name="malformedDataErrorTitle">Malformed Data Error</string>
    <string name="malformedDataError">A background thread received malformed or unexpected data.</string>

    <string name="welcomeTitle">Welcome!</string>
    <string name="aboutThisAppTitle">About This App</string>
    <string name="aboutThisAppText">
        <b>About this app</b>\n\t
            RelayRemote is an app for controlling an Arduino relay server. The Arduino turns on/off electrical relays when given commands from a client,
            like this app.\n\n
            To use this app, you\'ll need an Arduino and Arduino Ethernet Shield running the sketch found at
            https://github.com/shanet/RelayRemote.\n\n
            More info about setting up Arduino can be found at the link above as can the source code for this app. If you encounter any problems, please
            open an issue on GitHub at the link above.

        \n\n<b>License</b>\n\t
            This program is free software: you can redistribute it and/or modify
            it under the terms of the GNU Lesser General Public License as published by
            the Free Software Foundation, either version 3 of the License, or
            (at your option) any later version.\n\n

            This program is distributed in the hope that it will be useful,
            but WITHOUT ANY WARRANTY; without even the implied warranty of
            MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
            GNU Lesser General Public License for more details.\n\n

            You should have received a copy of the GNU Lesser General Public License
            along with this program.  If not, see http://www.gnu.org/licenses/.

    </string>

    <string name="changelogTitle">Changelog</string>
    <string name="changelogText">
        <b>Current Version: 1.3</b>
        \n\n<b>1.3:</b>
            \n\t- Added delay between relays when turning on/off multiple relays in a group
        \n\n<b>1.2:</b>
            \n\t- Reordered groups and relays fragments so that groups is first
            \n\t- Fixed bug with widget where the UI would not be updated on device orientation change
        \n\n<b>1.1.1:</b>
            \n\t- Fixed blank screen on start if no relays were added
        \n\n<b>1.1.0:</b>
            \n\t- Fixed force close when app is restarted
        \n\n<b>1.0.2:</b>
            \n\t- Fixed broken link in about dialog
        \n\n<b>1.0.1:</b>
            \n\t- Fixed widget force close
        \n\n<b>1.0.0:</b>
            \n\t- Initial release! :D
    </string>

</resources>