<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" >
  <item android:id="@+id/addRelayMenuOption"
    android:title="@string/addRelay"
    android:icon="@drawable/new_icon"
    android:showAsAction="ifRoom"/>
  <item android:id="@+id/refreshRelaysMenu"
    android:title="@string/refreshRelays"
    android:icon="@drawable/refresh_icon"
    android:showAsAction="ifRoom"/>
  <item android:id="@+id/allOnMenuOption"
    android:title="@string/allOn"/>
  <item android:id="@+id/allOffMenuOption"
    android:title="@string/allOff"/>
  <item android:id="@+id/aboutMenuOption"
    android:title="@string/about"
    android:icon="@drawable/about_icon"
    android:showAsAction="ifRoom"/>
  <item android:id="@+id/changelogMenuOption"
    android:title="@string/changelogTitle"/>
</menu>
