<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" >
  <item android:id="@+id/createGroupMenuOption"
    android:title="@string/createGroup"
    android:icon="@drawable/new_icon"
    android:showAsAction="ifRoom"/>
  <item android:id="@+id/refreshGroupsMenu"
    android:title="@string/refreshRelays"
    android:icon="@drawable/refresh_icon"
    android:showAsAction="ifRoom"/>
  <item android:id="@+id/groupAllOnMenuOption"
    android:title="@string/allOn"/>
  <item android:id="@+id/groupAllOffMenuOption"
    android:title="@string/allOff"/>
  <item android:id="@+id/aboutMenuOption"
    android:title="@string/about"
    android:icon="@drawable/about_icon"
    android:showAsAction="ifRoom"/>
  <item android:id="@+id/changelogMenuOption"
    android:title="@string/changelogTitle"/>
</menu>
