<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">

  <TextView android:id="@+id/addEditGroupNameLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/nameLabel" />

  <EditText android:id="@+id/addEditGroupName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/addEditGroupNameLabel"
    android:inputType="text"
    android:ems="10" />

  <TextView android:id="@+id/addEditRelayListLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/addEditGroupName"
    android:text="@string/selectRelays" />

  <ListView android:id="@+id/addEditRelayList"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/addEditRelayListLabel" />

  <Button android:id="@+id/addEditRelayGroup"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/addEditRelayList"
    android:text="@string/createGroup" />

  <LinearLayout android:id="@+id/addGroupEmpty"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical">

    <TextView android:id="@+id/emptyText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:textSize="20sp"
      android:text="@string/emptyText" />

    <Button android:id="@+id/emptyAddRelayGroup"
     	android:layout_width="match_parent"
     	android:layout_height="wrap_content"
     	android:text="@string/createGroup" />
  </LinearLayout>
</RelativeLayout>
